@@ -1,1 +1,3 @@
 -XX:+EnableDynamicAgentLoading
+--enable-native-access=ALL-UNNAMED
+-Xshare:off
